[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "MonteCarlo"
version = "0.1.0"
description = "Monte Carlo Library with multiple equity models"
authors = [
  { name="Benedict Hasenauer", email="benedict.hasenauer@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pybind11"
]